--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@ const scheduleData = {
 
 const omikujiResults = [
   {name: '凶', text: '水鉄砲で撃たれる'},
-  {name: '吉', text: '廊下に立たされる'},
+  {name: '吉', text: '隕石にぶつかる'},
   {name: '末吉', text: '常北ファームで愛のささやき'},
   {name: '小吉', text: '脳筋大爆発！'},
-  {name: '中吉', text: '授業中指されない'},
+  {name: '中吉', text: '脳みそ絶対零度'},
   {name: '大吉', text: '照沼と睨めっこ'}
 ];
 
