--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ html {
 <body>
 <main class="container">
   <header class="header">
-    <h1 style="margin: 0;">11月7日（金）</h1>
+    <h1 style="margin: 0;">11月10日（月）</h1>
     <div class="bible-text">
       <div>Peace Truth LOVE</div>
     </div>
@@ -198,17 +198,17 @@ html {
 const scheduleData = {
   'today': {
     date: '本日',
-    content:  '<div class="change-item">出版委員：高翔原稿「学園祭の原稿」締切日</div><div class="change-item">7限：英語講習</div>' },
-  'tomorrow': { date: '明日', content: '<div class="change-item">勉強勉強勉強</div>' },
-  'following': { date: '明後日', content: '<div class="change-item">11/9（日）2年8組の生徒がカフェを開きます。場所は大甕駅徒歩2分のミカケル２F。マフィンと紅茶セットで500円の予定。時間は10時から16時です。</div>' }
+    content:  '<div class="change-item">趣味は勉強、特技はテスト</div>' },
+  'tomorrow': { date: '明日', content: '<div class="change-item">来週の今日から後期中間試験です</div><div class="change-item">7限：数学講習</div>' },
+  'following': { date: '明後日', content: '<div class="change-item">3限：体育</div>' }
 };
 
 const omikujiResults = [
   {name: '凶', text: '水鉄砲で撃たれる'},
-  {name: '吉', text: '廊下に立たされる'},
+  {name: '吉', text: '隕石に注意'},
   {name: '末吉', text: '常北ファームで愛のささやき'},
   {name: '小吉', text: '脳筋大爆発！'},
-  {name: '中吉', text: '授業中指されない'},
+  {name: '中吉', text: '脳みそ絶対零度'},
   {name: '大吉', text: '照沼と睨めっこ'}
 ];
 
