--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ button { cursor:pointer; padding:8px 12px; border-radius:6px; border:1px solid #
   </section>
 
   <section>
-    <h2>共有ギャラリー</h2>
+    <h2>画廊SHION</h2>
     <div id="gallery"></div>
   </section>
 </main>
