--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@ button{ cursor:pointer; padding:4px 10px; border-radius:6px; border:1px solid #b
 <script>
 // ===== スケジュール・おみくじ =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div class="change-item">趣味は勉強、特技はテスト</div>' },
+  'today': { date: '本日', content: '<div class="change-item">音楽選択者有志ヴァイオリンコンサート
+13：05～13：10@4号館ホール 第9シンフォニーより</div>' },
   'tomorrow': { date: '明日', content: '<div class="change-item">試験直前の土曜日を有効活用</div>' },
   'following': { date: '明後日', content: '<div class="change-item">試験直前の日曜日を有効活用</div>' },
   'test1': { date: '11月18日（火）', content: '<div class="change-item">1限：論理国語</div><div class="change-item">2限：化学</div>' },
