--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ button{ cursor:pointer; padding:4px 10px; border-radius:6px; border:1px solid #b
 
 <main class="container">
   <header class="header">
-    <h1>11月14日（金）</h1>
-    <div class="bible-text">Peace Truth LOVE</div>
+    <h1>11月15日（土）</h1>
+    <div class="bible-text">知性と教養が服を着て歩いている</div>
   </header>
 
   <div class="main-content">
@@ -192,9 +192,9 @@ button{ cursor:pointer; padding:4px 10px; border-radius:6px; border:1px solid #b
 <script>
 // ===== スケジュール・おみくじ =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div class="change-item">音楽選択者有志ヴァイオリンコンサート13時05分～13時10分＠4号館ホール「第9シンフォニー」より</div>' },
-  'tomorrow': { date: '明日', content: '<div class="change-item">試験直前の土曜日を有効活用</div>' },
-  'following': { date: '明後日', content: '<div class="change-item">試験直前の日曜日を有効活用</div>' },
+  'today': { date: '本日', content: '<div class="change-item">試験直前の土曜日を有効活用' },
+  'tomorrow': { date: '明日', content: '<div class="change-item">試験直前の日曜日を有効活用</div>' },
+  'following': { date: '明後日', content: '<div class="change-item">趣味は勉強、特技はテスト</div>' },
   'test1': { date: '11月18日（火）', content: '<div class="change-item">1限：論理国語</div><div class="change-item">2限：化学</div>' },
   'test2': { date: '11月19日（水）', content: '<div class="change-item">1限：公共</div><div class="change-item">2限：論理・表現Ⅱ</div><div class="change-item">3限：地理探究</div>' },
   'test3': { date: '11月20日（木）', content: '<div class="change-item">1限：古典探究</div><div class="change-item">2限：英語CⅡ</div>' },
