--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ logout.onclick=async()=>{
 
 upload.onclick=async()=>{
   const user=auth.currentUser;
-  if(!user||!user.emailVerified){status.textContent="ログインしてメール認証を完了してください";return;}
+  if(!user||!user.emailVerified){status.textContent="メール認証を完了してください";return;}
   const file=fileInput.files[0];
   if(!file){status.textContent="画像を選択してください";return;}
   upload.disabled=true; status.textContent="アップロード中...";
