--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
     <button id="logoutBtn" style="display:none;">ログアウト</button>
   </div>
   <div class="auth-row">
-    <input id="email" type="email" placeholder="icj21..../ ich24....@s.icc.ac.jp">
+    <input id="email" type="email" placeholder="icj21/ich24....@s.icc.ac.jp">
     <input id="password" type="password" placeholder="パスワード：情報教室">
   </div>
 </section>
