--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ header { display: flex; align-items: center; gap: 12px; margin-bottom: 8px; }
 .card img { width: 100%; height: 100px; object-fit: cover; border-radius: 6px; transition: transform 0.3s; }
 .card img:hover { transform: scale(1.05); }
 .meta { font-size: 12px; color: #555; margin-top: 4px; white-space: pre-line; text-align: center; }
-#status { font-size: 13px; color: #333; }
 button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px solid #bbb; background: #f7f7f7; }
 .upload-row { display: flex; gap: 6px; align-items: center; margin-top: 4px; }
-.upload-row input, .upload-row button { height: 32px; }
+.upload-row button { height: 32px; }
+#status { font-size: 13px; color: #333; margin-left:8px; max-width:200px; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
 #overlay {
   position: fixed; top: 0; left: 0; width: 100%; height: 100%;
   background: rgba(0,0,0,0.8); display: none; justify-content: center; align-items: center; z-index: 1000;
@@ -72,13 +72,11 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 </div>
 
 <!-- Webページ表示エリア -->
-
 <div id="drawArea">
-  <iframe id="drawFrame" src="https://incict-design.github.io/spelling/" allowfullscreen style="width:100%;height:300px;border:none;border-radius:6px;margin-top:10px;"></iframe>
+  <iframe src="https://incict-design.github.io/spelling/" allowfullscreen style="width:100%;height:300px;border:none;border-radius:6px;margin-top:10px;"></iframe>
 </div>
-
 <div id="drawArea">
-  <iframe id="drawFrame" src="https://incict-design.github.io/hikariplay/" allowfullscreen style="width:100%;height:300px;border:none;border-radius:6px;"></iframe>
+  <iframe src="https://incict-design.github.io/hikariplay/" allowfullscreen style="width:100%;height:300px;border:none;border-radius:6px;"></iframe>
 </div>
 
 <!-- ギャラリー -->
@@ -86,7 +84,8 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
   <h2>画廊SHION</h2>
   <div id="gallery"></div>
   <div class="upload-row">
-    <input id="fileInput" type="file" accept="image/*">
+    <input id="fileInput" type="file" accept="image/*" style="display:none;">
+    <button id="selectBtn">ファイルを選択</button>
     <button id="uploadBtn">アップロード</button>
     <span id="status"></span>
   </div>
@@ -180,7 +179,9 @@ loginBtn=document.getElementById("loginBtn"), logoutBtn=document.getElementById(
 authStatus=document.getElementById("authStatus"), fileInput=document.getElementById("fileInput"),
 uploadBtn=document.getElementById("uploadBtn"), status=document.getElementById("status"),
 gallery=document.getElementById("gallery"), overlay=document.getElementById("overlay"),
-overlayImg=document.getElementById("overlayImg");
+overlayImg=document.getElementById("overlayImg"), selectBtn=document.getElementById("selectBtn");
+
+let selectedFile = null;
 
 // 認証状態変更
 auth.onAuthStateChanged(user => {
@@ -209,16 +210,22 @@ loginBtn.addEventListener("click",async()=>{
 // ログアウト
 logoutBtn.addEventListener("click",()=>auth.signOut());
 
+// ファイル選択
+selectBtn.addEventListener('click',()=>fileInput.click());
+fileInput.addEventListener('change',()=>{
+  selectedFile = fileInput.files[0] || null;
+  status.textContent = selectedFile ? selectedFile.name : '';
+});
+
 // アップロード
 uploadBtn.addEventListener("click",async()=>{
   const user=auth.currentUser;
   if(!user||!user.emailVerified){status.textContent="ログインが必要です"; return;}
-  const file=fileInput.files[0];
-  if(!file){status.textContent="画像を選択してください"; return;}
+  if(!selectedFile){status.textContent="画像を選択してください"; return;}
   uploadBtn.disabled=true; status.textContent="アップロード中...";
   try{
     const ref=storage.ref(`test-images/${user.uid}`);
-    await ref.put(file);
+    await ref.put(selectedFile);
     const url=await ref.getDownloadURL();
     await db.collection("test-images").doc(user.uid).set({
       username:user.displayName||user.email,
@@ -226,7 +233,7 @@ uploadBtn.addEventListener("click",async()=>{
       updatedAt:new Date()
     });
     status.textContent="アップロード完了！";
-    fileInput.value="";
+    selectedFile=null; fileInput.value="";
   }catch(e){ status.textContent="アップロード失敗"; }
   finally{ uploadBtn.disabled=false; }
 });
@@ -247,4 +254,3 @@ overlay.onclick=()=>{overlay.style.display="none"; overlayImg.src="";}
 </script>
 </body>
 </html>
-
