--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ const scheduleData = {
   'following': { date: '11/19（水）', content: '<div>1限：公共</div><div>2限：論理・表現Ⅱ</div><div>3限：４組のみ：地理探究</div>' },
   'test3': { date: '11/20（木）', content: '<div>1限：古典探究</div><div>2限：英語CⅡ</div>' },
   'test4': { date: '11/21（金）', content: '<div>1限：文：世・日 / 理：物・生</div><div>2限：数学ⅡB</div>' },
- 'test5': { date: '試験上の注意', content: '<div><div>【試験場の注意】①不正行為の厳禁 / ②物品貸借の禁止 / ③下敷の使用禁止 / ④膝掛使用禁止 / ⑤机上に置くのは、シャープペンシル・鉛筆と消しゴムのみ（ペンケースは置かない）。 / ⑥机の中には物を入れて置かない（聖書・讃美歌等も入れて置かない）。 / ⑦試験開始5分前には着席し、監督の先生を静かに待つ。 / ⑧試験は落ち着いた態度で受験し、誤解を招くことのないようにする。 / ⑨机上の落書きは消しておくこと。 / ⑩携帯電話(スマートウォッチ等インターネット機能付き電子機器を含む)は机の上や中に置いたり、ポケットに入れたりせず、必ず電源を切ってバッグの中に入れておく。 / ⑪カバンはファスナーを閉めて椅子の下に置き、カバンの中が見えないようにする。 / ⑫複数科目が同一時間にある場合は、科目ごとに座席を移動する。</div></div>' }
+ 'test5': { date: '試験上の注意', content: '<div>【試験場の注意】</div><div>①不正行為の厳禁</div><div>③下敷の使用禁止</div><div>④膝掛使用禁止</div><div>⑤机上に置くのは、シャープペンシル・鉛筆と消しゴムのみ（ペンケースは置かない）。</div><div>⑥机の中には物を入れて置かない（聖書・讃美歌等も入れて置かない）。</div><div>⑦試験開始5分前には着席し、監督の先生を静かに待つ。</div><div>⑧試験は落ち着いた態度で受験し、誤解を招くことのないようにする。</div><div>⑨机上の落書きは消しておくこと。</div><div>⑩携帯電話(スマートウォッチ等インターネット機能付き電子機器を含む)は机の上や中に置いたり、ポケットに入れたりせず、必ず電源を切ってバッグの中に入れておく。</div><div>⑪カバンはファスナーを閉めて椅子の下に置き、カバンの中が見えないようにする。</div><div>⑫複数科目が同一時間にある場合は、科目ごとに座席を移動する。</div>' }
 };
 
 const omikujiResults = [
@@ -323,3 +323,4 @@ overlay.onclick=()=>{ overlay.style.display="none"; overlayImg.src=""; };
 </script>
 </body>
 </html>
+
