--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ const scheduleData = {
  'tomorrow': { date: '明日', content: '<div>【後期中間試験最終日】</div><div>1限：物理/生物</div><div>2限：数学ⅡB</div>' },
   'following': { date: '明後日', content: '<div>授業変更はありません。</div>' },
  
-  'notice': { date: '諸連絡', content: '<div>11/22（土）1限は英検要約問題対策を行います。iPad用キーボード（bluetoothでよい）がある生徒は持参してください。</div>' }
+  'notice': { date: '諸連絡', content: '<div>11/22（土）1限は英検要約問題対策を行います。iPad用キーボード（bluetoothでよい）がある生徒は持参してください。</div><div>3年次コース選択科目最終調査ですがギリギリに提出するなんて言うことはしない。もう決まっている場合はすぐに提出すること。「後回しにする」精神構造は修正しよう。</div>' }
 };
 
 const omikujiResults = [
