--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@ const scheduleData = {
 
 const omikujiResults = [
   {name:'大狂',text:'隕石注意'},
-  {name:'凶',text:'水鉄砲で撃たれる'},
-  {name:'吉',text:'脳筋大爆発！'},
-  {name:'小吉',text:'脳みそ絶対零度'},
-  {name:'中吉',text:'常北ファームで愛のささやき'},
-  {name:'大吉',text:'萩谷と睨めっこ'}
+  {name:'凶',text:'虎の穴で修行'},
+  {name:'吉',text:'常北ファームで愛のささやき'},
+  {name:'小吉',text:'脳筋大爆発！'},
+  {name:'中吉',text:'脳みそ絶対零度'},
+  {name:'大吉',text:'正義の味方になれる'}
 ];
 
 function getTodayKey(){ const t=new Date(); return t.getFullYear()+"-"+(t.getMonth()+1)+"-"+t.getDate(); }
