--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div>【後期中間試験最終日】</div><div>1限：物理/生物</div><div>2限：数学ⅡB</div>' },
+  'today': { date: '本日', content: '<div>【後期中間試験最終日】</div><div>1限：物理/生物</div><div>2限：数学ⅡB</div><div>クリスマス・マーケット実行委員会：13時00分@物理室</div>' },
 
  'tomorrow': { date: '明日', content: '<div>1限は英検要約問題対策を行います。iPad用キーボード（bluetoothでよい）がある生徒は持参してください。</div>' },
   'following': { date: '明後日', content: '<div>学ぶ者に休日はない</div>' },
