--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <body>
 
 <header>
-  <h1>11月21日（金）</h1>
+  <h1>11月22日（土）</h1>
   <div id="status" style="margin-left:auto"></div>
 </header>
 
@@ -172,12 +172,12 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div>【後期中間試験最終日】</div><div>1限：物理/生物</div><div>2限：数学ⅡB</div><div>クリスマス・マーケット実行委員会：13時00分@物理室</div>' },
+  'today': { date: '本日', content: '<div>今日の放課後、明日と明後日、何を身に付ける？</div>' },
 
- 'tomorrow': { date: '明日', content: '<div>1限は英検要約問題対策を行います。iPad用キーボード（bluetoothでよい）がある生徒は持参してください。</div>' },
+ 'tomorrow': { date: '明日', content: '<div>学ぶ者に休日はない</div>' },
   'following': { date: '明後日', content: '<div>学ぶ者に休日はない</div>' },
  
-  'notice': { date: '諸連絡', content: '<div>受験勉強のスタートを先延ばしにはしていませんか？フライングが許されているのが受験勉強です。</div>' }
+  'notice': { date: '諸連絡', content: '<div>後回しにするとせっかく身に付けても練習機会が不十分なまま終わる。</div>' }
 };
 
 const omikujiResults = [
