--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div>17時00分：クリスマスツリー点灯式</div><div>17時30分～18時00分：クリスマスマーケット</div>' },
+  'today': { date: '本日', content: '<div>17時00分：クリスマスツリー点灯式</div><div>17時30分～18時00分：クリスマスマーケット（PayPay可）</div>' },
 
  'tomorrow': { date: '明日', content: '<div>3限：古典探究</div><div>6限：LHR</div><div>7限：探究</div>' },
   'following': { date: '明後日', content: '<div>6限：LHR</div>' },
  
-  'notice': { date: '諸連絡', content: '<div>後期中間試験追試の場所は大会議室（職員室上）です。</div><div>一貫部：4限後すぐに4号館ホールで讃美歌練習（10分ほど）</div>' }
+  'notice': { date: '諸連絡', content: '<div>【追試】後期中間試験追試の場所は大会議室（職員室上）です。</div><div>【一貫部】一貫部：4限後すぐに4号館ホールで讃美歌練習（10分ほど）</div>' }
 };
 
 const omikujiResults = [
