--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
   <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('tomorrow')">明日</button>
   <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('following')">明後日</button>
   <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('notice')">諸連絡</button>
- 
+ <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('xmas')">Christmas</button>
+
 </div>
 
 <div id="scheduleDisplay" class="schedule-display">
@@ -172,12 +173,16 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div>17時00分：クリスマスツリー点灯式</div><div>17時30分～18時00分：クリスマスマーケット（PayPay可）</div>' },
+  'today': { date: '本日', content: '<div>クリスマスツリー点灯式＋クリスマスマーケット</div>' },
 
  'tomorrow': { date: '明日', content: '<div>3限：古典探究</div><div>6限：LHR</div><div>7限：探究</div>' },
   'following': { date: '明後日', content: '<div>6限：LHR</div>' },
  
-  'notice': { date: '諸連絡', content: '<div>【追試】後期中間試験追試の場所は大会議室（職員室上）です。</div><div>【一貫部】一貫部：4限後すぐに4号館ホールで讃美歌練習（10分ほど）</div>' }
+  'notice': { date: '諸連絡', content: '<div>【追試】後期中間試験追試の場所は大会議室（職員室上）です。</div><div>【一貫部】一貫部：4限後すぐに4号館ホールで讃美歌練習（10分ほど）</div>' },
+
+ 'xmas': { date: 'Chrsitmas', content: '<div>15時30分～16時45分：マーケット（PayPay可）</div><div>17時00分～17時30分：点灯式</div><div>17時30分～18時00分：マーケット（PayPay可）</div><div>キッチンカー１台（チュロス、ふりふりポテト、各種ジュース類）</div><div>グリーンスポット（お花屋さん</div><div>いのちのことば社によるクリスマス関連グッズ（キリスト教専門の本屋さんです。アドベントカレンダー、クリスマスカード、クリスマスの本など）</div><div>「はしっぽ」</div><div>まつぼっくりを使った装飾、キャンドル、クリスマスの装飾類、オーナメントなど</div><div>家庭部生徒によるホットチョコ</div><div>ローゼンブルクのシュトーレン（カットしたものを個包装）</div>' }
+
+
 };
 
 const omikujiResults = [
