--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ const scheduleData = {
  
   'notice': { date: '諸連絡', content: '<div>【追試】後期中間試験追試の場所は大会議室（職員室上）です。</div><div>【一貫部】一貫部：4限後すぐに4号館ホールで讃美歌練習（10分ほど）</div>' },
 
- 'xmas': { date: 'Chrsitmas Market', content: '<div>15時30分～16時45分：マーケット（PayPay可）</div><div>17時00分～17時30分：点灯式</div><div>17時30分～18時00分：マーケット（PayPay可）</div><div>キッチンカー１台（チュロス、ふりふりポテト、各種ジュース類）</div><div>グリーンスポット（お花屋さん</div><div>いのちのことば社によるクリスマス関連グッズ（キリスト教専門の本屋さんです。アドベントカレンダー、クリスマスカード、クリスマスの本など）</div><div>「はしっぽ」</div><div>まつぼっくりを使った装飾、キャンドル、クリスマスの装飾類、オーナメントなど</div><div>家庭部生徒によるホットチョコ</div><div>ローゼンブルクのシュトーレン（カットしたものを個包装）</div>' }
+ 'xmas': { date: 'Chrsitmas Market', content: '<div>15時30分～16時45分：マーケット（PayPay可）</div><div>17時00分～17時30分：点灯式</div><div>17時30分～18時00分：マーケット（PayPay可）</div><div>・キッチンカー１台（チュロス、ふりふりポテト、各種ジュース類）</div><div>・グリーンスポット（お花屋さん）</div><div>・いのちのことば社によるクリスマス関連グッズ（キリスト教専門の本屋さんです。アドベントカレンダー、クリスマスカード、クリスマスの本など）</div><div>・「はしっぽ」</div><div>・まつぼっくりを使った装飾、キャンドル、クリスマスの装飾類、オーナメントなど</div><div>・家庭部生徒によるホットチョコ</div><div>・ローゼンブルクのシュトーレン（カットしたものを個包装）</div>' }
 
 
 };
