--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div>3限：古典探究</div><div>6限：LHR</div><div>7限：探究</div>' },
+  'today': { date: '本日', content: '<div>【一貫部】本日讃美歌練習なし</div><div>3限：古典探究</div><div>6限：LHR</div><div>7限：探究</div>' },
 
  'tomorrow': { date: '明日', content: '<div>6限：LHR</div>' },
   'following': { date: '明後日', content: '<div>予定は未定</div>' },
  
-  'notice': { date: '諸連絡', content: '<div>【一貫部】4限後すぐに4号館ホールで讃美歌練習（10分ほど）</div><div>【国際理解講演会】アンケート未回答の生徒はすぐに回答すること。</div><div>【コース希望調査】締切は11月26日（水）でした。</div><div>【私物整理】11月30日（日）に中学生が模試でこの教室を使います。私物は教室内ではなくロッカーの中に入れておくこと。ハンガー掛けも使用しないこと。</div>' },
+  'notice': { date: '諸連絡', content: '<div>【国際理解講演会】アンケート未回答の生徒はすぐに回答すること。</div><div>【コース希望調査】締切は11月26日（水）でした。</div><div>【私物整理】11月30日（日）に中学生が模試でこの教室を使います。私物は教室内ではなくロッカーの中に入れておくこと。ハンガー掛けも使用しないこと。</div>' },
 
  'xmas': { date: '追試（大会議室）', content: '<div>【11月26日（水）】1限：地理探究</div><div>【11月27日（木）】1限：論国、2限：化学、3限：公共、4限：論表</div><div>【11月28日（金）】1限：古典探究、2限：英語CⅡ、3限：物理、4限：数学ⅡB</div>' }
 
