--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ const scheduleData = {
   'today': { date: '本日', content: '<div>【一貫部】本日讃美歌練習あり</div><div>6限：LHR（一貫：ホール、高入：講堂）</div>' },
 
  'tomorrow': { date: '明日', content: '<div>3,4限：国際理解講演会</div>' },
-  'following': { date: '明後日', content: '<div>4限：カット（単語テスト学習室＋追試あり）</div>' },
+  'following': { date: '明後日', content: '<div>4限：カット（単語テスト：学習室＋追試あり）</div>' },
  
   'notice': { date: '諸連絡', content: '<div>【国際理解講演会】アンケート（2回目）未回答の生徒はすぐに回答すること。追試で出席できない生徒は回答しない。</div><div>【私物整理】11月30日（日）に中学生が模試でこの教室を使います。私物は教室内ではなくロッカーの中に入れておくこと。ハンガー掛けも使用しないこと。</div>' },
 
