--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ const scheduleData = {
  'tomorrow': { date: '明日', content: '<div>3,4限：国際理解講演会</div>' },
   'following': { date: '明後日', content: '<div>4限：カット（単語テスト：学習室＋追試あり）</div>' },
  
-  'notice': { date: '諸連絡', content: '<div>【国際理解講演会】アンケート（2回目）未回答の生徒はすぐに回答すること。追試で出席できない生徒は回答しない。</div><div>【私物整理】11月30日（日）に中学生が模試でこの教室を使います。私物は教室内ではなくロッカーの中に入れておくこと。ハンガー掛けも使用しないこと。</div>' },
+  'notice': { date: '諸連絡', content: '<div>【国際理解講演会】アンケート（2回目）未回答の生徒はすぐに回答すること。追試で出席できない生徒は回答しない。</div><div>【国際交流委員】11月27日（木）17時00分オンライン交流会＠オーストラリア教室</div><div>【出版委員】クラス紹介（画用紙1枚）を閉講式（12/22）までに阿久津先生に提出。＊各部活動、生徒会役員、委員会の活動報告も原稿用紙の提出があります。</div><div>【私物整理】11月30日（日）に中学生が模試でこの教室を使います。私物は教室内ではなくロッカーの中に入れておくこと。ハンガー掛けも使用しないこと。</div>' },
 
  'xmas': { date: '追試（大会議室）', content: '<div>【11月27日（木）】1限：論国、2限：化学、3限：公共、4限：論表</div><div>【11月28日（金）】1限：古典探究、2限：英語CⅡ、3限：物理、4限：数学ⅡB</div>' }
 
