--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div>【一貫部】本日讃美歌練習あり</div><div>6限：LHR（一貫：ホール、高入：講堂）</div>' },
+  'today': { date: '本日', content: '<div>【一貫部】本日讃美歌練習なし</div><div>6限：LHR（一貫：ホール（スマホ持参）、高入：講堂（筆記用具持参））</div>' },
 
  'tomorrow': { date: '明日', content: '<div>3,4限：国際理解講演会</div>' },
   'following': { date: '明後日', content: '<div>4限：カット（単語テスト：学習室＋追試あり）</div>' },
