--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div>3,4限：国際理解講演会</div>' },
+  'today': { date: '本日', content: '<div>【国際理解講演会訂正版配信】1限後にClassiを確認してください。</div><div>3,4限：国際理解講演会</div>' },
 
  'tomorrow': { date: '明日', content: '<div>4限：カット</div>' },
   'following': { date: '明後日', content: '<div>趣味は勉強、特技はテスト</div>' },
  
-  'notice': { date: '諸連絡', content: '<div>【探究アンケート】未回答者はすぐに回答しなさい。</div><div>【出版委員】クラス紹介（画用紙1枚）を閉講式（12/22）までに阿久津先生に提出。＊各部活動、生徒会役員、委員会の活動報告も原稿用紙の提出があります。</div><div>【私物整理】11月30日（日）に中学生が模試でこの教室を使います。私物は教室内ではなくロッカーの中に入れておくこと。ハンガー掛けも使用しないこと。</div>' },
+  'notice': { date: '諸連絡', content: '<div>【国際理解講演会訂正版配信】1限後にClassiを確認してください。</div><div>【探究アンケート】未回答者はすぐに回答しなさい。</div><div>【出版委員】クラス紹介（画用紙1枚）を閉講式（12/22）までに阿久津先生に提出。＊各部活動、生徒会役員、委員会の活動報告も原稿用紙の提出があります。</div><div>【私物整理】11月30日（日）に中学生が模試でこの教室を使います。私物は教室内ではなくロッカーの中に入れておくこと。ハンガー掛けも使用しないこと。</div>' },
 
  'xmas': { date: '追試（大会議室）', content: '<div>【11月28日（金）】1限：古典探究、2限：英語CⅡ、3限：物理、4限：数学Ⅱ</div>' }
 
