--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <body>
 
 <header>
-  <h1>11月28日（金）</h1>
+  <h1>11月29日（土）</h1>
   <div id="status" style="margin-left:auto"></div>
 </header>
 
@@ -119,7 +119,7 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
   <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('tomorrow')">明日</button>
   <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('following')">明後日</button>
   <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('notice')">諸連絡</button>
-<button class="date-button fancy-btn fancy-blue" onclick="showSchedule('xmas')">追試</button>
+<button class="date-button fancy-btn fancy-blue" onclick="showSchedule('xmas')">修学旅行</button>
  
 
 </div>
@@ -174,14 +174,14 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div>【国際理解講演会訂正版配信】1限後にClassiを確認してください。</div><div>3,4限：国際理解講演会</div>' },
+  'today': { date: '本日', content: '<div>4限：カット</div>' },
 
- 'tomorrow': { date: '明日', content: '<div>4限：カット</div>' },
-  'following': { date: '明後日', content: '<div>趣味は勉強、特技はテスト</div>' },
+ 'tomorrow': { date: '明日', content: '<div>趣味は勉強、特技はテスト</div>' },
+  'following': { date: '明後日', content: '<div>8時00分～8時30分：スーツケース積込＠3号館前</div>' },
  
-  'notice': { date: '諸連絡', content: '<div>【国際理解講演会訂正版配信】1限後にClassiを確認してください。</div><div>【探究アンケート】未回答者はすぐに回答しなさい。</div><div>【出版委員】クラス紹介（画用紙1枚）を閉講式（12/22）までに阿久津先生に提出。＊各部活動、生徒会役員、委員会の活動報告も原稿用紙の提出があります。</div><div>【私物整理】11月30日（日）に中学生が模試でこの教室を使います。私物は教室内ではなくロッカーの中に入れておくこと。ハンガー掛けも使用しないこと。</div>' },
+  'notice': { date: '諸連絡', content: '<div>【出版委員】クラス紹介（画用紙1枚）を閉講式（12/22）までに阿久津先生に提出。＊各部活動、生徒会役員、委員会の活動報告も原稿用紙の提出があります。</div><div>【私物整理】11月30日（日）に中学生が模試でこの教室を使います。私物は教室内ではなくロッカーの中に入れておくこと。ハンガー掛けも使用しないこと。</div>' },
 
- 'xmas': { date: '追試（大会議室）', content: '<div>【11月28日（金）】1限：古典探究、2限：英語CⅡ、3限：物理、4限：数学Ⅱ</div>' }
+ 'xmas': { date: '修学旅行', content: '<div>【12月1日（月）】8時00分～8時30分：スーツケース積込＠3号館前</div><div>【12月2日（火）】4限：結団式</div><div>【12月3日（水）】6時50分：バスに集合＠大甕駅東口信号渡る</div>' }
 
 };
 
