--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ const scheduleData = {
  'tomorrow': { date: '明日', content: '<div>趣味は勉強、特技はテスト</div>' },
   'following': { date: '明後日', content: '<div>8時00分～8時30分：スーツケース積込＠3号館前</div>' },
  
-  'notice': { date: '諸連絡', content: '<div>【出版委員】クラス紹介（画用紙1枚）を閉講式（12/22）までに阿久津先生に提出。＊各部活動、生徒会役員、委員会の活動報告も原稿用紙の提出があります。</div><div>【私物整理】11月30日（日）に中学生が模試でこの教室を使います。私物は教室内ではなくロッカーの中に入れておくこと。ハンガー掛けも使用しないこと。</div>' },
+  'notice': { date: '諸連絡', content: '<div>【出版委員】クラス紹介（画用紙1枚）を閉講式（12/22）までに阿久津先生に提出。＊各部活動、生徒会役員、委員会の活動報告も原稿用紙の提出があります。</div><div>【私物整理】11月30日（日）に中学生が模試でこの教室を使います。私物は教室内ではなくロッカーの中に入れておくこと。ハンガー掛けも使用しないこと。ロッカーは施錠。</div>' },
 
  'xmas': { date: '修学旅行', content: '<div>【12月1日（月）】8時00分～8時30分：スーツケース積込＠3号館前</div><div>【12月2日（火）】4限：結団式</div><div>【12月3日（水）】6時50分：バス（3号車）に集合＠大甕駅東口信号渡る</div>' }
 
