--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div>修学旅行アンケート（友部乗車）</div<div>4限：カット</div>' },
+  'today': { date: '本日', content: '<div>修学旅行アンケート（友部乗車）</div><div>4限：カット</div>' },
 
  'tomorrow': { date: '明日', content: '<div>趣味は勉強、特技はテスト</div>' },
   'following': { date: '明後日', content: '<div>8時00分～8時30分：スーツケース積込＠3号館前</div>' },
