--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <body>
 
 <header>
-  <h1>12月1日（月）</h1>
+  <h1>12月2日（火）</h1>
   <div id="status" style="margin-left:auto"></div>
 </header>
 
@@ -119,7 +119,7 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
   <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('tomorrow')">明日</button>
   <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('following')">明後日</button>
   <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('notice')">諸連絡</button>
-<button class="date-button fancy-btn fancy-blue" onclick="showSchedule('xmas')">修学旅行</button>
+
  
 
 </div>
@@ -174,12 +174,12 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div>8時00分～8時30分：スーツケース積込＠3号館前</div>' },
+  'today': { date: '本日', content: '<div>4限：結団式＠講堂（スマホ持参）</div>' },
 
- 'tomorrow': { date: '明日', content: '<div>4限：カット</div>' },
-  'following': { date: '明後日', content: '<div>6時50分：バス（3号車）に集合＠大甕駅東口信号渡る</div>' },
+ 'tomorrow': { date: '明日', content: '<div>6時50分：バス（3号車）に集合＠大甕駅東口信号渡る</div>' },
+  'following': { date: '明後日', content: '<div>6時起床</div>' },
  
-  'notice': { date: '諸連絡', content: '<div>【出版委員】クラス紹介（画用紙1枚）を閉講式（12/22）までに阿久津先生に提出。＊各部活動、生徒会役員、委員会の活動報告も原稿用紙の提出があります。</div>' },
+  'notice': { date: '諸連絡', content: '<div>【修学旅行不参加】12/2(火)は3限後に下校。12/3(水)以降は8時35分に2年1組集合（iPad持参）。4限後に下校。</div><div>【出版委員】クラス紹介（画用紙1枚）を閉講式（12/22）までに阿久津先生に提出。＊各部活動、生徒会役員、委員会の活動報告も原稿用紙の提出があります。</div>' },
 
  'xmas': { date: '修学旅行', content: '<div>【12月1日（月）】8時00分～8時30分：スーツケース積込＠3号館前</div><div>【12月2日（火）】4限：結団式</div><div>【12月3日（水）】6時50分：バス（3号車）に集合＠大甕駅東口信号渡る</div>' }
 
