--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <body>
 
 <header>
-  <h1>12月2日（火）</h1>
+  <h1>12月9日（火）</h1>
   <div id="status" style="margin-left:auto"></div>
 </header>
 
@@ -134,11 +134,14 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
   
 <!-- Webページ -->
 <div id="drawArea">
-  <iframe src="https://incict-design.github.io/hikariplay/" allowfullscreen style="width:100%;height:300px;border:none;border-radius:6px;"></iframe>
+  <iframe src="https://padlet.com/ichicjh/padlet-rrd93da9v5fpx4l8/" allowfullscreen style="width:100%;height:300px;border:none;border-radius:6px;"></iframe>
 </div>
 
 
-<div class="padlet-embed" style="border:1px solid rgba(0,0,0,0.1);border-radius:2px;box-sizing:border-box;overflow:hidden;position:relative;width:100%;background:#F4F4F4"><p style="padding:0;margin:0"><iframe src="https://padlet.com/embed/sn27w63p9h29am7j" frameborder="0" allow="camera;microphone;geolocation;display-capture;clipboard-write" style="width:100%;height:608px;display:block;padding:0;margin:0"></iframe></p><div style="display:flex;align-items:center;justify-content:end;margin:0;height:28px"><a href="https://padlet.com?ref=embed" style="display:block;flex-grow:0;margin:0;border:none;padding:0;text-decoration:none" target="_blank"><div style="display:flex;align-items:center;"><img src="https://padlet.net/embeds/made_with_padlet_2022.png" width="114" height="28" style="padding:0;margin:0;background:0 0;border:none;box-shadow:none" alt="Padletで作成されました"></div></a></div></div>
+<!-- Webページ -->
+<div id="drawArea">
+  <iframe src="https://incict-design.github.io/Christmas/" allowfullscreen style="width:100%;height:300px;border:none;border-radius:6px;"></iframe>
+</div>
 
 
 
@@ -183,12 +186,12 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '本日', content: '<div>4限：結団式＠講堂（スマホ持参）</div>' },
+  'today': { date: '本日', content: '<div>1限：数Ⅱ</div><div>2限：英CⅡ</div><div>7限：英語講習は休講</div>' },
 
- 'tomorrow': { date: '明日', content: '<div>6時50分：バス（3号車）に集合＠大甕駅東口信号渡る</div>' },
-  'following': { date: '明後日', content: '<div>6時起床</div>' },
+ 'tomorrow': { date: '明日', content: '3限：英CⅡ</div><div>6限：LHR</div><div>7限：探究</div>' },
+  'following': { date: '明後日', content: '<div>7限：数学講習</div>' },
  
-  'notice': { date: '諸連絡', content: '<div>【修学旅行不参加】12/2(火)は3限後に下校。12/3(水)以降は8時35分に2年1組集合（iPad持参）。4限後に下校。</div><div>【出版委員】クラス紹介（画用紙1枚）を閉講式（12/22）までに阿久津先生に提出。＊各部活動、生徒会役員、委員会の活動報告も原稿用紙の提出があります。</div>' },
+  'notice': { date: '諸連絡', content: '<div>【出版委員】クラス紹介（画用紙1枚）を閉講式（12/22）までに阿久津先生に提出。＊各部活動、生徒会役員、委員会の活動報告も原稿用紙の提出があります。</div>' },
 
  'xmas': { date: '修学旅行', content: '<div>【12月1日（月）】8時00分～8時30分：スーツケース積込＠3号館前</div><div>【12月2日（火）】4限：結団式</div><div>【12月3日（水）】6時50分：バス（3号車）に集合＠大甕駅東口信号渡る</div>' }
 
